--- a/index.html
+++ b/index.html
@@ -139,22 +139,22 @@
         <div class="trending-container">
             <h1>Trending</h1>
             <trending>
-                <img src="profile2.png"></img>
+                <img src="/images/profile2.png"></img>
                 <div class="at">@tegan</div>
                 <div class="project-name">World Peace Builder</div>
             </trending>
             <trending>
-                <img src="profile3png"></img>
+                <img src="/images/profile3.png"></img>
                 <div class="at">@morgan</div>
                 <div class="project-name">Cancer Curer</div>
             </trending>
             <trending>
-                <img src="profile4.png"></img:src>
+                <img src="images/profile4.png"></img:src>
                 <div class="at">@kendall</div>
                 <div class="project-name">No War Module</div>
             </trending>
             <trending>
-                <img src="profile5.png"></img:src>
+                <img src="images/profile5.png"></img:src>
                 <div class="at">@alex</div>
                 <div class="project-name">Zero Emission Machine</div>
             </trending>
