added styles and layout for top navigation bar

--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
         <div class="nav-top">
             <div class="searchbar">
                 <i class="material-icons">search</i>
-                <div class="bar"></div>
+                <input type="text">
             </div>
             <div class="profile">
                 <i class="material-icons">notifications_active</i>
-                <img src="images/profile1.png" alt="PF">
-                <div class="name">John Smith</div>
+                <img class="pp-small" src="images/profile1.png" alt="PF">
+                <h1 class="name">John Smith</h1>
             </div>
         </div>
         <div class="nav-bottom">
             <div class="welcome">
-                <img src="images/profile1.png" alt="PF">
-                <p>Hi there,</p>
-                <p>John Smith (@john)</p>
+                <img class="pp-large" src="images/profile1.png" alt="PF">
+                <p class="msg">Hi there,</p>
+                <h1 class="name">John Smith (@john)</h1>
             </div>
             <div class="option">
                 <ul>
-                    <li>New</li>
-                    <li>Upload</li>
-                    <li>Share</li>
+                    <li><button stlye="button">New</button></li>
+                    <li><button stlye="button">Upload</button></li>
+                    <li><button stlye="button">Share</button></li>
                 </ul>
             </div>
         </div>
@@ -139,22 +139,22 @@
         <div class="trending-container">
             <h1>Trending</h1>
             <trending>
-                <img src="/images/profile2.png"></img>
+                <img class="pp-small" src="/images/profile2.png"></img>
                 <div class="at">@tegan</div>
                 <div class="project-name">World Peace Builder</div>
             </trending>
             <trending>
-                <img src="/images/profile3.png"></img>
+                <img class="pp-small" src="/images/profile3.png"></img>
                 <div class="at">@morgan</div>
                 <div class="project-name">Cancer Curer</div>
             </trending>
             <trending>
-                <img src="images/profile4.png"></img:src>
+                <img class="pp-small" src="images/profile4.png"></img:src>
                 <div class="at">@kendall</div>
                 <div class="project-name">No War Module</div>
             </trending>
             <trending>
-                <img src="images/profile5.png"></img:src>
+                <img class="pp-small" src="images/profile5.png"></img:src>
                 <div class="at">@alex</div>
                 <div class="project-name">Zero Emission Machine</div>
             </trending>
