--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
 
     <div class="sidebar">
         <div class="title">
-            <i class="material-icons">dashboard</i>
+            <i class="material-icons logo">dashboard</i>
             <h1>Dashboard</h1>
         </div>
         <div class="sidebar-links">
             <ul>
-                <li><i class="material-icons">home</i></li>
-                <li><i class="material-icons">account_box</i></li>
-                <li><i class="material-icons">message</i></li>
-                <li><i class="material-icons">history</i></li>
-                <li><i class="material-icons">event_available</i></li>
-                <li><i class="material-icons">groups</i></li>
+                <li><i class="material-icons">home</i><span>Home</span></li>
+                <li><i class="material-icons">account_box</i><span>Profile</span></li>
+                <li><i class="material-icons">message</i><span>Messages</span></li>
+                <li><i class="material-icons">history</i><span>History</span></li>
+                <li><i class="material-icons">event_available</i><span>Tasks</span></li>
+                <li><i class="material-icons">groups</i><span>Communities</span></li>
             </ul>
         </div>
         <div class="sidebar-links bottom">
             <ul>
-                <li><i class="material-icons">settings</i></li>
-                <li><i class="material-icons">support_agent</i></li>
-                <li><i class="material-symbols-outlined">encrypted</i></li>
+                <li><i class="material-icons">settings</i>Settings</li>
+                <li><i class="material-icons">support_agent</i>Support</li>
+                <li><i class="material-symbols-outlined">encrypted</i>Privacy</li>
             </ul>
         </div>
     </div>
