added styles and layouts for dahsboard items (projects, trending and announcements)

--- a/index.html
+++ b/index.html
@@ -121,43 +121,47 @@
                 </div>
             </div>
         </div>
-        <div class="announcement-container">
+        <div class="announcements">
             <h1>Announcements</h1>
-            <div class="announcement">
-                <h3>Site Maintanance</h3>
-                <div class="announcements-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Vulputate ac risus erat consequat sodales. Ad venenatis...</div>
-            </div>
-            <div class="announcement">
-                <h3>Community Share Day</h3>
-                <div class="announcements-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Vulputate ac risus erat consequat sodales. Ad venenatis...</div>
-            </div>
-            <div class="announcement">
-                <h3>Updated Privacy Policy</h3>
-                <div class="announcements-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Vulputate ac risus erat consequat sodales. Ad venenatis...</div>
+            <div class="announcement-container">
+                <div class="announcement">
+                    <h3>Site Maintanance</h3>
+                    <div class="announcements-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Vulputate ac risus erat consequat sodales. Ad venenatis...</div>
+                </div>
+                <div class="announcement">
+                    <h3>Community Share Day</h3>
+                    <div class="announcements-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Vulputate ac risus erat consequat sodales. Ad venenatis...</div>
+                </div>
+                <div class="announcement">
+                    <h3>Updated Privacy Policy</h3>
+                    <div class="announcements-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Vulputate ac risus erat consequat sodales. Ad venenatis...</div>
+                </div>
             </div>
         </div>
-        <div class="trending-container">
+        <dic class="trending">
             <h1>Trending</h1>
-            <trending>
-                <img class="pp-small" src="/images/profile2.png"></img>
-                <div class="at">@tegan</div>
-                <div class="project-name">World Peace Builder</div>
-            </trending>
-            <trending>
-                <img class="pp-small" src="/images/profile3.png"></img>
-                <div class="at">@morgan</div>
-                <div class="project-name">Cancer Curer</div>
-            </trending>
-            <trending>
-                <img class="pp-small" src="images/profile4.png"></img:src>
-                <div class="at">@kendall</div>
-                <div class="project-name">No War Module</div>
-            </trending>
-            <trending>
-                <img class="pp-small" src="images/profile5.png"></img:src>
-                <div class="at">@alex</div>
-                <div class="project-name">Zero Emission Machine</div>
-            </trending>
+            <div class="trending-container">
+                <div class="trending-card">
+                    <img class="pp-small" src="/images/profile2.png"></img>
+                    <div class="at">@tegan</div>
+                    <div class="project-name">World Peace Builder</div>
+                </div class="trending-card">
+                <div class="trending-card">
+                    <img class="pp-small" src="/images/profile3.png"></img>
+                    <div class="at">@morgan</div>
+                    <div class="project-name">Cancer Curer</div>
+                </div class="trending-card">
+                <div class="trending-card">
+                    <img class="pp-small" src="images/profile4.png"></img:src>
+                    <div class="at">@kendall</div>
+                    <div class="project-name">No War Module</div>
+                </div class="trending-card">
+                <div class="trending-card">
+                    <img class="pp-small" src="images/profile5.png"></img:src>
+                    <div class="at">@alex</div>
+                    <div class="project-name">Zero Emission Machine</div>
+                </div class="trending-card">
+        </dic>
         </div>
     </div>
 
