fixed bug where profilepics didnt load; wrong path was ommited

--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
             <h1>Trending</h1>
             <div class="trending-container">
                 <div class="trending-card">
-                    <img class="pp-small" src="/images/profile2.png"></img>
+                    <img class="pp-small" src="images/profile2.png"></img>
                     <div class="at">@tegan</div>
                     <div class="project-name">World Peace Builder</div>
                 </div class="trending-card">
                 <div class="trending-card">
-                    <img class="pp-small" src="/images/profile3.png"></img>
+                    <img class="pp-small" src="images/profile3.png"></img>
                     <div class="at">@morgan</div>
                     <div class="project-name">Cancer Curer</div>
                 </div class="trending-card">
